--- a/SignInUp/signup.html
+++ b/SignInUp/signup.html
@@ -10,6 +10,7 @@
     <div>
         <div>
           <h1>Sign Up</h1>
+          <p>hii how are you</p>
         </div>
         <div>
             
