--- a/landing/images/landing.html
+++ b/landing/images/landing.html
@@ -20,8 +20,8 @@
             </div>
             <ul id="navLinks" class="hidden sm:flex sm:space-x-8 text-lg flex-col sm:flex-row w-full sm:w-auto mt-4 sm:mt-0">
                 <li><a href="#" class="hover:underline py-2 sm:py-0">Home</a></li>
-                <li><a href="#" class="hover:underline py-2 sm:py-0">Destinations</a></li>
-                <li><a href="#" class="hover:underline py-2 sm:py-0">Packages</a></li>
+                <li><a href="#dest" class="hover:underline py-2 sm:py-0">Destinations</a></li>
+                <li><a href="#plan" class="hover:underline py-2 sm:py-0">Packages</a></li>
                 <li><a href="#contact" id="contactLink" class="hover:underline py-2 sm:py-0">Contact</a></li>
                 <li><a href="#about" class="hover:underline py-2 sm:py-0">About Us</a></li>
             </ul>
@@ -176,7 +176,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Hiking the Mighty Himalayas</h3>
                     <p class="text-gray-600 text-sm">By Arjun Sharma - July 10, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Embark on an exhilarating journey through the rugged terrains of the Himalayas, with breathtaking views and challenging trails.</p>
-                    <a href="https://example.com/adventure-himalayas" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="../hiking.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
             <!-- Cultural Blog Post -->
@@ -186,7 +186,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Festivals of Rajasthan</h3>
                     <p class="text-gray-600 text-sm">By Priya Mehta - July 8, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Dive into the rich cultural heritage with vibrant festivals that showcase Rajasthan's traditions and colors.</p>
-                    <a href="https://example.com/cultural-rajasthan" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="../rajesthan.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
             <!-- Food & Drink Blog Post -->
@@ -196,7 +196,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Spices of Kerala</h3>
                     <p class="text-gray-600 text-sm">By Vikram Singh - July 5, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Explore the aromatic world of Kerala's cuisine with its unique blend of spices and flavors.</p>
-                    <a href="https://example.com/food-kerala" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="../kerala.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
             <!-- Travel Tips Blog Post -->
@@ -206,7 +206,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Packing Tips for India</h3>
                     <p class="text-gray-600 text-sm">By Anjali Kapoor - July 3, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Get essential packing advice to make your Indian adventure smooth and enjoyable.</p>
-                    <a href="https://example.com/tips-packing" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="../packing.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
         </div>
@@ -214,7 +214,7 @@
 
     <!-- Booking Form Section -->
     <section id="booking" class="container mx-auto px-4 py-8 sm:py-12">
-        <h2 class="text-2xl sm:text-3xl font-bold text-center mb-6 sm:mb-8">Plan Your Indian Adventure</h2>
+        <h2 class="text-2xl sm:text-3xl font-bold text-center mb-6 sm:mb-8" id="plan">Plan Your Indian Adventure</h2>
         <div class="max-w-xl sm:max-w-2xl mx-auto bg-white p-6 sm:p-8 rounded-lg shadow-lg">
             <div class="space-y-4">
                 <div>
@@ -254,7 +254,7 @@
 
     <!-- Featured Destinations Section -->
     <section class="container mx-auto px-4 py-8 sm:py-12">
-        <h2 class="text-2xl sm:text-3xl font-bold text-center mb-6 sm:mb-8">Featured Indian Destinations</h2>
+        <h2 class="text-2xl sm:text-3xl font-bold text-center mb-6 sm:mb-8" id="dest">Featured Indian Destinations</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                 <img src="https://thumbs.dreamstime.com/z/panorama-hawa-mahal-palace-palace-winds-famous-landmark-beautiful-jaipur-pink-city-rajasthan-also-known-as-72440879.jpg?ct=jpeg" alt="Jaipur" class="h-40 sm:h-48 w-full object-cover">
