finished linking and relocation

--- a/landing/Signin.html
+++ b/landing/Signin.html
@@ -43,7 +43,7 @@
                       <form class="space-y-6 " action="#">
                         <h3 class="text-3xl text-center font-medium text-gray-900 dark:text-white">Sign in</h3>
                         <div class="flex flex-col items-center ">
-                          <img class="w-28 h-28 mb-1 rounded-full shadow-lg" src="/SignInUp/imags/img1.jpg" alt="Bonnie image"/>
+                          <img class="w-28 h-28 mb-1 rounded-full shadow-lg" src="./imags/img1.jpg" alt="Bonnie image"/>
                         </div>
                           
                           <div>
