--- a/landing/hiking.html
+++ b/landing/hiking.html
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <ul id="navLinks" class="hidden sm:flex sm:space-x-8 text-lg flex-col sm:flex-row w-full sm:w-auto mt-4 sm:mt-0">
-                <li><a href="index.html" class="hover:underline py-2 sm:py-0">Home</a></li>
+                <li><a href="./images/landing.html" class="hover:underline py-2 sm:py-0">Home</a></li>
                 <!-- <li><a href="#" class="hover:underline py-2 sm:py-0">Destinations</a></li>
                 <li><a href="#" class="hover:underline py-2 sm:py-0">Packages</a></li>
                 <li><a href="#contact" id="contactLink" class="hover:underline py-2 sm:py-0">Contact</a></li>
@@ -103,7 +103,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Spices of Kerala</h3>
                     <p class="text-gray-600 text-sm">By Vikram Singh - July 5, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Explore the aromatic world of Kerala's cuisine.</p>
-                    <a href="spices-kerala.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="./kerala.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
