--- a/landing/kerala.html
+++ b/landing/kerala.html
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <ul id="navLinks" class="hidden sm:flex sm:space-x-8 text-lg flex-col sm:flex-row w-full sm:w-auto mt-4 sm:mt-0">
-                <li><a href="index.html" class="hover:underline py-2 sm:py-0">Home</a></li>
+                <li><a href="./images/landing.html" class="hover:underline py-2 sm:py-0">Home</a></li>
                 <!-- <li><a href="#" class="hover:underline py-2 sm:py-0">Destinations</a></li>
                 <li><a href="#" class="hover:underline py-2 sm:py-0">Packages</a></li>
                 <li><a href="#contact" id="contactLink" class="hover:underline py-2 sm:py-0">Contact</a></li>
@@ -94,7 +94,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Hiking the Mighty Himalayas</h3>
                     <p class="text-gray-600 text-sm">By Arjun Sharma - July 10, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Embark on an exhilarating journey through the rugged terrains.</p>
-                    <a href="hiking-himalayas.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="./hiking.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
@@ -103,7 +103,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Festivals of Rajasthan</h3>
                     <p class="text-gray-600 text-sm">By Priya Mehta - July 8, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Dive into the rich cultural heritage with vibrant festivals.</p>
-                    <a href="festivals-rajasthan.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="./rajesthan.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
@@ -112,7 +112,7 @@
                     <h3 class="text-xl font-semibold text-gray-800">Packing Tips for India</h3>
                     <p class="text-gray-600 text-sm">By Anjali Kapoor - July 3, 2025</p>
                     <p class="text-gray-700 mt-2 mb-4">Get essential packing advice for your trip.</p>
-                    <a href="packing-tips.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
+                    <a href="./packing.html" class="inline-block bg-black text-white px-4 py-2 rounded-md hover:bg-gray-800">Read More</a>
                 </div>
             </div>
         </div>
