--- a/landing/signup.html
+++ b/landing/signup.html
@@ -40,7 +40,7 @@
                   
                 <div  class="flex flex-col justify-between bg-white border border-gray-200 rounded-3xl shadow-sm md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
                    <div class="h-auto flex">
-                    <img class="object-cover w-full rounded-t-lg h-96 overflow-hidden sm:h-auto sm:w-48 sm:rounded-none sm:rounded-s-lg" src="./imags/wp4782909.webp" alt="travel image">
+                    <!-- <img class="object-cover w-full rounded-t-lg h-96 overflow-hidden sm:h-auto sm:w-48 sm:rounded-none sm:rounded-s-lg" src="./imags/wp4782909.webp" alt="travel image"> -->
                   </div>
           
                    <div class="flex flex-col justify-between  p-8 leading-normal">
