landing page to index

--- a/landing/hiking.html
+++ b/landing/hiking.html
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <ul id="navLinks" class="hidden sm:flex sm:space-x-8 text-lg flex-col sm:flex-row w-full sm:w-auto mt-4 sm:mt-0">
-                <li><a href="./images/landing.html" class="hover:underline py-2 sm:py-0">Home</a></li>
+                <li><a href="./images/index.html" class="hover:underline py-2 sm:py-0">Home</a></li>
                 <!-- <li><a href="#" class="hover:underline py-2 sm:py-0">Destinations</a></li>
                 <li><a href="#" class="hover:underline py-2 sm:py-0">Packages</a></li>
                 <li><a href="#contact" id="contactLink" class="hover:underline py-2 sm:py-0">Contact</a></li>
